src/parser/parser_stmt.c
#include "parser.h"
#include <stdio.h>
#include <stdlib.h>

void parse_lista_instrucoes_declaracoes(parser_t *parser, ast_node_t *parent);

/* ============================================================================
   PARSER DE STATEMENTS (INSTRUÇÕES) - IMPLEMENTAÇÃO
   
   Implementa parsing de comandos/instruções:
   - Blocos { ... }
   - If-else
   - While
   - Do-while
   - For
   - Return
   - Break
   - Continue
   - Expressões
   
   ============================================================================ */

/* ============================================================================
   BLOCO DE INSTRUÇÕES
   ============================================================================ */

/*
   Bloco → SYM_LBRACE ListaInstrucoes SYM_RBRACE
   ListaInstrucoes → Instrucao ListaInstrucoes
                   | ε
*/
ast_node_t* parse_bloco(parser_t *parser) {
    token_t token = peek_token(parser);
    expect(parser, SYM_LBRACE);  // Consume '{'
    
    ast_node_t *block = create_ast_node(AST_BLOCK, NULL, token.linha, token.coluna);
    
    /* Enter new scope for block */
    enter_local_scope(parser);
    
    /* Parse declarations and statements until '}' */
    parse_lista_instrucoes_declaracoes(parser, block);
    
    expect(parser, SYM_RBRACE);  // Consume '}'
    
    /* Exit block scope */
    exit_local_scope(parser);
    
    return block;
}

/* ============================================================================
   INSTRUÇÃO IF-ELSE
   ============================================================================ */

/*
   InstrucaoIf → KW_IF SYM_LPAREN Expressao SYM_RPAREN Instrucao
                 (KW_ELSE Instrucao)?
*/
ast_node_t* parse_instrucao_if(parser_t *parser) {
    token_t token = peek_token(parser);
    expect(parser, KW_IF);  // Consume 'if'
    
    expect(parser, SYM_LPAREN);  // Consume '('
    ast_node_t *condition = parse_expressao(parser);
    expect(parser, SYM_RPAREN);  // Consume ')'
    
    ast_node_t *then_stmt = parse_instrucao(parser);
    
    ast_node_t *if_node = create_ast_node(AST_IF_STMT, NULL, token.linha, token.coluna);
    add_ast_child(if_node, condition);
    add_ast_child(if_node, then_stmt);
    
    /* Optional else */
    if (match(parser, KW_ELSE)) {
        consume_token(parser);  // Consume 'else'
        ast_node_t *else_stmt = parse_instrucao(parser);
        add_ast_child(if_node, else_stmt);
    }
    
    return if_node;
}

/* ============================================================================
   INSTRUÇÃO WHILE
   ============================================================================ */

/*
   InstrucaoWhile → KW_WHILE SYM_LPAREN Expressao SYM_RPAREN Instrucao
*/
ast_node_t* parse_instrucao_while(parser_t *parser) {
    token_t token = peek_token(parser);
    expect(parser, KW_WHILE);  // Consume 'while'
    
    expect(parser, SYM_LPAREN);  // Consume '('
    ast_node_t *condition = parse_expressao(parser);
    expect(parser, SYM_RPAREN);  // Consume ')'
    
    ast_node_t *body = parse_instrucao(parser);
    
    ast_node_t *while_node = create_ast_node(AST_WHILE_STMT, NULL, token.linha, token.coluna);
    add_ast_child(while_node, condition);
    add_ast_child(while_node, body);
    
    return while_node;
}

/* ============================================================================
   INSTRUÇÃO DO-WHILE
   ============================================================================ */

/*
   InstrucaoDo → KW_DO Instrucao KW_WHILE SYM_LPAREN Expressao SYM_RPAREN SYM_SEMICOLON
*/
ast_node_t* parse_instrucao_do(parser_t *parser) {
    token_t token = peek_token(parser);
    expect(parser, KW_DO);  // Consume 'do'
    
    ast_node_t *body = parse_instrucao(parser);
    
    expect(parser, KW_WHILE);  // Consume 'while'
    expect(parser, SYM_LPAREN);  // Consume '('
    ast_node_t *condition = parse_expressao(parser);
    expect(parser, SYM_RPAREN);  // Consume ')'
    expect(parser, SYM_SEMICOLON);  // Consume ';'
    
    ast_node_t *do_while_node = create_ast_node(AST_DO_WHILE_STMT, NULL, token.linha, token.coluna);
    add_ast_child(do_while_node, body);
    add_ast_child(do_while_node, condition);
    
    return do_while_node;
}

/* ============================================================================
   INSTRUÇÃO FOR
   ============================================================================ */

/*
   InstrucaoFor → KW_FOR SYM_LPAREN 
                  (Expressao | ε) SYM_SEMICOLON
                  (Expressao | ε) SYM_SEMICOLON
                  (Expressao | ε) SYM_RPAREN
                  Instrucao
*/
ast_node_t* parse_instrucao_for(parser_t *parser) {
    token_t token = peek_token(parser);
    expect(parser, KW_FOR);  // Consume 'for'
    
    expect(parser, SYM_LPAREN);  // Consume '('
    
    /* Initialization (optional) */
    ast_node_t *init = NULL;
    if (!match(parser, SYM_SEMICOLON)) {
        init = parse_expressao(parser);
    }
    expect(parser, SYM_SEMICOLON);  // Consume ';'
    
    /* Condition (optional) */
    ast_node_t *condition = NULL;
    if (!match(parser, SYM_SEMICOLON)) {
        condition = parse_expressao(parser);
    }
    expect(parser, SYM_SEMICOLON);  // Consume ';'
    
    /* Increment (optional) */
    ast_node_t *increment = NULL;
    if (!match(parser, SYM_RPAREN)) {
        increment = parse_expressao(parser);
    }
    expect(parser, SYM_RPAREN);  // Consume ')'
    
    /* Body */
    ast_node_t *body = parse_instrucao(parser);
    
    ast_node_t *for_node = create_ast_node(AST_FOR_STMT, NULL, token.linha, token.coluna);
    if (init) add_ast_child(for_node, init);
    if (condition) add_ast_child(for_node, condition);
    if (increment) add_ast_child(for_node, increment);
    add_ast_child(for_node, body);
    
    return for_node;
}

/* ============================================================================
   INSTRUÇÃO RETURN
   ============================================================================ */

/*
   InstrucaoReturn → KW_RETURN (Expressao | ε) SYM_SEMICOLON
*/
ast_node_t* parse_instrucao_return(parser_t *parser) {
    token_t token = peek_token(parser);
    expect(parser, KW_RETURN);  // Consume 'return'
    
    ast_node_t *return_node = create_ast_node(AST_RETURN_STMT, NULL, token.linha, token.coluna);
    
    /* Optional return value */
    if (!match(parser, SYM_SEMICOLON)) {
        ast_node_t *value = parse_expressao(parser);
        add_ast_child(return_node, value);
    }
    
    expect(parser, SYM_SEMICOLON);  // Consume ';'
    
    return return_node;
}

/* ============================================================================
   INSTRUÇÃO BREAK
   ============================================================================ */

/*
   InstrucaoBreak → KW_BREAK SYM_SEMICOLON
*/
ast_node_t* parse_instrucao_break(parser_t *parser) {
    token_t token = peek_token(parser);
